test/release/examples/users-guide/datapar/promotion.error2.good
promotion.chpl:109: error: const actual is passed to 'ref' formal 'x' of maybeCopy()
promotion.chpl:108: note: The shadow variable 'r' is constant due to forall intents in this loop
